<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_black"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtCalculations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="20dp"
        android:text=""
        android:textColor="@color/calculation_text_color"
        android:textSize="24sp"
        app:fontFamily="@font/amiko" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtEquals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/label_equals"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:fontFamily="@font/amiko_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtEquals"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_zero"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold"
                app:fontFamily="@font/amiko_bold" />
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/card_bg"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAc"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_ac"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnParenthesis"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_parenthesis"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPercent"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_percent"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDevide"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_devide"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="50dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn7"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_seven"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn8"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_eight"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn9"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_nine"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMultiply"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_multiply"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="50dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_four"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn5"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_five"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn6"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_six"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMinus"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_minus"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="50dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_one"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_two"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_three"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPlus"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_plus"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="50dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDot"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_dot"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnZero"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_zero2"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/blue"
                app:cornerRadius="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEquals"
                android:layout_width="148dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/label_equals"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/default_black" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>